# libreoffice__templates

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  README  config.mk.in  configure  configure.ac  project.config
src/presnt/: BrightBlue.otp  CubaLibre.otp  DNA.otp  Hexagons.otp  LushGreen.otp  Metropolis.otp  Typography.otp  Vintage.otp
