# -*- Mode: makefile-gmake; tab-width: 4; indent-tabs-mode: t -*-
#
# This file is part of the LibreOffice project.
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
AC_INIT([LibreOffice Templates], [0.1],
        [various LibreOffice contributors and members of the Document Foundation <info@documentfoundation.org>],
        [libreoffice-templates])
AC_CONFIG_FILES([config.mk])
AC_OUTPUT
# vim: set noet sw=4 ts=4:
